# decent-video-overlay

./: Cargo.toml  LICENSE  README.md  example.html  index.html
.github/workflows/: pr_check.yml
data/: shot1.json  shot2.json
src/: main.rs  routes.rs
src/components/: chart.rs  graph.rs  mod.rs  title.rs
src/components/base/: mod.rs  page.rs
src/libs/: mod.rs  range.rs  scale.rs
src/libs/models/: chart_data.rs  mod.rs  pressure_data.rs  shot_data.rs
src/libs/models/json/: mod.rs  shot_data.rs
src/pages/: mod.rs  player.rs
