[package]
name = "decent-video-overlay"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kuy/decent-video-overlay"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
gloo = "0.8"
gloo-utils = "0.1.6"
js-sys = "0.3.63"
log = "0.4.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
stylist = { version = "0.12.0", features = ["yew"] }
wasm-logger = "0.2.0"
yew = { version="0.20.0", features=["csr"] }
yew-router = "0.17.0"
