[package]
name = "decent-video-overlay"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kuy/decent-video-overlay"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
gloo = "0.10"
gloo-utils = "0.2.0"
js-sys = "0.3.64"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
stylist = { version = "0.12.1", features = ["yew"] }
wasm-logger = "0.2.0"
yew = { version="0.21.0", features=["csr"] }
yew-router = "0.17.0"
